Start or the lorem ipsum generator.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,14 @@
 
 {% block content %}
     <div class="container">
-        <h1>Hello {{user.full_name}}</h1>
-        <p>
-            Your username is {{user.username}}
-        </p>
+        <h1>
+            Lorem Ipsum
+            <small>
+                refresh the page to get new words
+            </small>
+        </h1>
+        <div class="well">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga delectus hic, perferendis, similique voluptatum cum. Deleniti sequi non facere quibusdam sed eos quod sit velit minima, vel, eius quidem perspiciatis.
+        </div>
     </div>
 {% endblock %}
