Add custom sytles.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,7 +8,7 @@
                 refresh the page to get new words
             </small>
         </h1>
-        <div class="well">
+        <div class="well lorem-well">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga delectus hic, perferendis, similique voluptatum cum. Deleniti sequi non facere quibusdam sed eos quod sit velit minima, vel, eius quidem perspiciatis.
         </div>
     </div>
