--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
             </small>
         </h1>
         <div class="well lorem-well">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga delectus hic, perferendis, similique voluptatum cum. Deleniti sequi non facere quibusdam sed eos quod sit velit minima, vel, eius quidem perspiciatis.
+            {{lorem_text}}
         </div>
     </div>
 {% endblock %}
