--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
             </small>
         </h1>
         <div class="well lorem-well">
-            {{lorem_text}}
+            Lorem ipsum {{lorem_text}}
         </div>
     </div>
 {% endblock %}
