Change page wording.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
         <h1>
             Lorem Ipsum
             <small>
-                refresh the page to get new words
+                refresh the page to get new text
             </small>
         </h1>
         <div class="well lorem-well">
