Move layout to base.html.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,9 +12,26 @@
 
 </head>
 <body>
+    <header>
+        <div class="container">
+            <h1>
+                Lorem Ipsum
+                <small>
+                    refresh the page to get new text
+                </small>
+            </h1>
+        </div>
+    </header>
     {% block content %}
 
     {% endblock %}
+
+    <footer>
+        <hr>
+        <div class="container">
+            &copy; Awesome Inc U. Bootcamp 2016
+        </div>
+    </footer>
 
     <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
     <!-- Latest compiled and minified JavaScript -->
