Add a generate lorem ipsum button.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,7 @@
             <h1>
                 Lorem Ipsum
                 <small>
-                    refresh the page to get new text
+                    the placeholder text generator
                 </small>
             </h1>
         </div>
