--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,5 +5,8 @@
         <div class="well lorem-well">
             Lorem ipsum {{lorem_text}}
         </div>
+        <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg btn-block">
+            GENERATE LOREM IPSUM
+        </a>
     </div>
 {% endblock %}
